@@ -1,67 +1,0 @@
-#! /bin/sh
-# GNU Mailutils -- a suite of utilities for electronic mail
-# Copyright (C) 2002, 2007 Free Software Foundation, Inc.
-#
-# GNU Mailutils is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3, or (at your option)
-# any later version.
-#
-# GNU Mailutils is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with GNU Mailutils; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
-
-REGEXP=""
-
-case "$1" in
-    "-r")      shift
-	       rm -rf $*
-	       exit 0;;
-    "-subst")  REGEXP="$2"
-    	       shift 2;;
-esac
-
-mkdirhier() {
-	dir=""
-	for d in `echo $1|sed 's,/, ,g'`
-	do
-		dir="$dir/$d"
-		test -d $dir || mkdir $dir
-	done
-}
-
-while [ $# -gt 0 ]
-do
-	SRCDIR=${1:?}
-	DSTDIR=${2:?}
-	shift 2
-
-	if [ ! -d $SRCDIR ]; then
-		echo "$SRCDIR not a directory" >&2
-		exit 1
-	fi
-	if [ ! -r $SRCDIR/DISTFILES ]; then
-		echo "$SRCDIR/DISTFILES does not exist" >&2
-		exit 1
-	fi
-	mkdirhier $DSTDIR
-	chmod -R u+w $DSTDIR
-	rm -rf $DSTDIR/*
-	
-	cat $SRCDIR/DISTFILES |
-	while read NAME
-	do
-	        case "$NAME" in
-		*.in)   newname=`echo $NAME|sed 's/\(.*\)\.in$/\1/'`
-		        sed "$REGEXP" $SRCDIR/$NAME > $DSTDIR/$newname;;
-		*)      newname=$NAME 
-		 	cp $SRCDIR/$NAME $DSTDIR/$newname;;
-		esac
-	        chmod u+w $DSTDIR/$newname
-	done
-done
